job crud and frontend added

--- a/src/JobBundle/Resources/views/Default/index.html.twig
+++ b/src/JobBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,6 @@
 {% extends '@Job/layout.html.twig' %}
 
 {% block content %}
-    <a href="{{ path('category_list') }}">Manage Categories</a>
+    <a href="{{ path('category_list') }}">Manage Categories</a> |
+    <a href="{{ path('job_list') }}">Manage Jobs</a>
 {% endblock %}
